Reduce header settings-icon left padding to fix its position
The gear/list icon in the character header sat too far right; tighten
its container's padding-left from 5px to 2px.

--- a/scss/components/_actor-sheet.scss
+++ b/scss/components/_actor-sheet.scss
@@ -213,7 +213,7 @@
                   display: flex;
                   justify-content: flex-start;
                   align-items: center;
-                  padding-left: 5px;
+                  padding-left: 2px;
                   color: white;
                   font-size: 20px;
                 }
